--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,7 @@ Assets/GameData.meta
 Assets/Settings.meta
 /Assets/Settings
 Assets/Settings/Settings.json.meta
+Assets/Video/Version 2.mp4
+Assets/Video/Version 2.mp4.meta
+Assets/Video/Version 1.mp4
+Assets/Video/Version 1.mp4.meta
